--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@arweave-wallet-kit-beta/browser-wallet-strategy": "^0.0.1-beta.4",
     "@arweave-wallet-kit-beta/core": "^0.0.1-beta.4",
     "@arweave-wallet-kit-beta/react": "^0.0.1-beta.4",
+    "@permaweb/aoconnect": "^0.0.61",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
